Use -webkit-overflow-scrolling so that Dialog scrolls better on iOS5+, fixes #16170.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@29891 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1611,6 +1611,9 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 .dijitDialogCloseIcon {
 	cursor: pointer;
 }
+.dijitDialogPaneContent {
+	-webkit-overflow-scrolling: touch;
+}
 .dijitDialogUnderlayWrapper {
 	position: absolute;
 	left: 0;
